fixed indentation error

--- a/main.kv
+++ b/main.kv
@@ -29,9 +29,13 @@ ScreenManager:
         MDBoxLayout:
             orientation: "vertical"
             MDToolbar:
-            title: "Taxi Company"
-        MDBottomNavigation:
-            MDBottomNavigationItem:
-                name: "status"
-                text: "Status"
-                icon: ""
+                title: "Taxi Company"
+            MDBottomNavigation:
+                MDBottomNavigationItem:
+                    name: "status"
+                    text: "Status"
+                    icon: "account"
+                MDBottomNavigationItem:
+                    name: "settings"
+                    text: "Settings"
+                    icon: "settings-outline"
