added zones tab

--- a/main.kv
+++ b/main.kv
@@ -36,6 +36,10 @@ ScreenManager:
                     text: "Status"
                     icon: "account"
                 MDBottomNavigationItem:
+                    name: "zones"
+                    text: "Zones"
+                    icon: "scatter-plot-outline"
+                MDBottomNavigationItem:
                     name: "settings"
                     text: "Settings"
                     icon: "settings-outline"
