--- a/main.kv
+++ b/main.kv
@@ -17,13 +17,13 @@
         LoginTextField:
             hint_text: "Username"
             id: id_username
-            text: "username"
+            text: root.username
             
         LoginTextField:
             hint_text: "Password"
             id: id_password
             password: True
-            text: "password"
+            text: root.password
             
         MDFillRoundFlatButton:
             pos_hint: {"center_x": .5}
