--- a/main.kv
+++ b/main.kv
@@ -4,8 +4,8 @@
 
 <LoginMDscreen>:
     name: "login"
-    username: id_username.text
-    password: id_password.text
+    username: id_username.__self__.text
+    password: id_password.__self__.text
     
     MDGridLayout:
         cols: 1
