added menu items

--- a/main.kv
+++ b/main.kv
@@ -44,6 +44,7 @@ AppScreenManager:
             
             MDToolbar:
                 title: "Taxi Company"
+                right_action_items: [['account', app.on_account], ['settings-outline', app.on_settings]]
                 
             MDBottomNavigation:
                 id: bottom_nav
