--- a/main.kv
+++ b/main.kv
@@ -43,9 +43,9 @@ ScreenManager:
             orientation: "vertical"
             
             MDToolbar:
-                title: "Taxi Company"
-                left_action_items: [['account', lambda x: x], ['settings-outline', lambda x: x]]
-                
+                title: "Company"
+                right_action_items: [["settings-outline", lambda x: x]]
+            
             MDBottomNavigation:
                 id: bottom_nav
             
