--- a/main.kv
+++ b/main.kv
@@ -44,7 +44,7 @@ ScreenManager:
             
             MDToolbar:
                 title: "Company"
-                right_action_items: [["settings-outline", lambda x: x]]
+                right_action_items: [["account", lambda x: x],["settings-outline", lambda x: x]]
             
             MDBottomNavigation:
                 id: bottom_nav
